# stool

./: .gitmodules  Makefile.am  configure.ac
stool/: Makefile  Makefile.am  Makefile.in  all_stool.h  main.c  stool  stool.c  stool.h  structures.h
stool.xcodeproj/: project.pbxproj
